--- a/eng/ci/ci.yml
+++ b/eng/ci/ci.yml
@@ -25,6 +25,6 @@ stages:
 - template: '/ci/stages.yml@pipelineTemplates'
   parameters:
     solutionFileName: Evo.Hexadecimals.sln
-    externalNugetFeed: ''
-    # externalNugetFeed: 'NugetDotOrg-Evo'
+    # externalNugetFeed: ''
+    externalNugetFeed: 'NugetDotOrg-Evo'
     
